--- a/all_of_statistics_problems.ipynb
+++ b/all_of_statistics_problems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "047bbc0b",
+   "id": "50b7dea4",
    "metadata": {},
    "source": [
     "# These are exercises from \"All of Statistics\" textbook"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6b2e29",
+   "id": "3e56e004",
    "metadata": {},
    "source": [
     "## Chapter 1: Probability"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0b3470",
+   "id": "788244db",
    "metadata": {},
    "source": [
     "### Exercise 21\n",
@@ -27,14 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "f65a4288",
+   "execution_count": 186,
+   "id": "3bb72f82",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "64291ee5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "p = .3\n",
     "n = 1000\n",
     "\n",
@@ -51,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "6ccc9651",
+   "id": "54b1034a",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e7bb1c",
+   "id": "ff29df4d",
    "metadata": {},
    "source": [
     "### Exercise 22 \n",
@@ -109,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "4060b5d4",
+   "execution_count": 185,
+   "id": "805390d1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For n=10, 0.3333333333333333\n",
-      "For n=100, 1.2333333333333334\n",
-      "For n=1000, 0.9733333333333334\n",
-      "For n=10000, 1.0046666666666666\n",
-      "For n=100000, 1.0043666666666666\n"
+      "For n=10, 1.3333333333333333\n",
+      "For n=100, 0.9333333333333333\n",
+      "For n=1000, 1.04\n",
+      "For n=10000, 1.0103333333333333\n",
+      "For n=100000, 1.0089333333333332\n"
      ]
     }
    ],
@@ -149,6 +157,150 @@
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de291ab3",
+   "metadata": {},
+   "source": [
+    "### Exercise 23"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c78ac6",
+   "metadata": {},
+   "source": [
+    " Here we will get some experience simulating conditional probabilities. Consider tossing a fair die. Let A = {2, 4, 6} and B = {1, 2, 3, 4}. Then, P(A) = 1/2, P(B) = 2/3 and P(AB) = 1/3. Since P(AB) = P(A)P(B), the events A and B are independent. Simulate draws from the sample space and verify that $\\hat{P}$(AB) = $\\hat{P}$(A)$\\hat{P}$(B) where $\\hat{P}$(A) is the proportion of times A occurred in the simulation and similarly for $\\hat{P}$(AB) and $\\hat{P}$(B). Now find two events A and B that are not independent. Compute $\\hat{P}$(A),$\\hat{P}$(B) and $\\hat{P}$(AB). Compare the calculated values to their theoretical values. Report your results and interpret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "id": "c7d107e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 328,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We start by simulating a die roll\n",
+    "def roll_die():\n",
+    "    \"\"\"Simulates a fair die\"\"\"\n",
+    "    return np.random.randint(1,7)\n",
+    "\n",
+    "roll_die()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "id": "47fce4a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of events in A: 0.4998\n",
+      "Proportion of events in B: 0.6512\n",
+      "Proportion of events in AB: 0.3239\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we roll the die n times and check how often A, B and AB occur\n",
+    "\n",
+    "n = 10000\n",
+    "A = [2, 4, 6]\n",
+    "B = [1, 2, 3, 4]\n",
+    "\n",
+    "\n",
+    "def check_ab(A, B, n=1000):\n",
+    "    \"\"\"Checks if outcome of die roll is in A, B and AB events\"\"\"\n",
+    "    \n",
+    "    # Initialize\n",
+    "    A_success = 0\n",
+    "    B_success = 0\n",
+    "    AB_success = 0\n",
+    "    \n",
+    "    # Loop over n rolls\n",
+    "    for i in range(n):\n",
+    "        result = roll_die()\n",
+    "        A_success = A_success + int(result in A)\n",
+    "        B_success = B_success + int(result in B)\n",
+    "        AB_success = AB_success + int(result in A and result in B)\n",
+    "    \n",
+    "    # Print results\n",
+    "    print(\"Proportion of events in A: {}\".format(A_success / n, \".4f\"))\n",
+    "    print(\"Proportion of events in B: {}\".format(B_success / n, \".4f\"))\n",
+    "    print(\"Proportion of events in AB: {}\".format(AB_success / n, \".4f\"))\n",
+    "\n",
+    "check_ab(A, B, n=n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "id": "62532028",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of events in A: 0.4964\n",
+      "Proportion of events in B: 0.5036\n",
+      "Proportion of events in AB: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's do it for events that are mutually exclusive. For example, A is even and B is odd\n",
+    "n = 10000\n",
+    "A = [2, 4, 6]\n",
+    "B = [1, 3, 5]\n",
+    "\n",
+    "check_ab(A, B, n=n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "id": "92561728",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of events in A: 0.5007\n",
+      "Proportion of events in B: 0.1711\n",
+      "Proportion of events in AB: 0.1711\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's do it for events that are not independent exclusive. For example, B is fully contained in A.\n",
+    "# We see they are not independent since p(A)*p(b) <> p(AB)\n",
+    "n = 10000\n",
+    "A = [2, 4, 6]\n",
+    "B = [2]\n",
+    "\n",
+    "check_ab(A, B, n=n)"
    ]
   }
  ],
